# JepaJitfusion

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/proposals/: jepajitfusion_architecture_v1.md
notebooks/: jit_sampling.ipynb  lejepa_embeddings.ipynb
src/jepajitfusion/: sample_app.py  train_app.py  train_fusion_app.py  train_jit_app.py  train_lejepa_app.py  utils.py
src/jepajitfusion/conf/: sample.yaml  train_fusion.yaml  train_jit.yaml  train_lejepa.yaml
src/jepajitfusion/conf/dataset/: imagenet_1k.yaml  imagenet_tiny.yaml  imagenette.yaml  pokemon_11k.yaml  pokemon_64.yaml
src/jepajitfusion/conf/decoder/: jit_base.yaml  jit_micro.yaml  jit_tiny.yaml
src/jepajitfusion/conf/encoder/: vit_small.yaml  vit_tiny.yaml
src/jepajitfusion/config/: __init__.py  data_config.py  decoder_config.py  encoder_config.py  sample_config.py  train_config.py
src/jepajitfusion/data/: datasets.py  downloader.py  transforms.py
src/jepajitfusion/decoder/: conditioning.py  diffusion.py  jit_model.py  sampler.py
src/jepajitfusion/encoder/: multicrop.py  projection_head.py  sigreg.py  vit.py
src/jepajitfusion/models/: ema.py
src/jepajitfusion/trainers/: base_trainer.py  fusion_trainer.py  jit_trainer.py  lejepa_trainer.py  summary.py
tests/: test_conditioning.py  test_data.py  test_diffusion.py  test_encoder_vit.py  test_jit_model.py  test_sampler.py  test_sigreg.py
