[project]
name = "jepajitfusion"
version = "0.1.0"
description = "LeJEPA + JiT diffusion: self-supervised encoder meets flow-matching decoder"
authors = [
    { name = "Larry Du", email = "larrydu88@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.13"

dependencies = [
    "torch>=2.4.1",
    "numpy>=2.1.1",
    "torchvision>=0.19.1",
    "pandas>=2.2.2",
    "click",
    "tqdm",
    "einops>=0.8.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "py7zr>=0.20",
    "requests>=2.31",
    "datasets>=3.0",
]

[dependency-groups]
dev = [
    "black[jupyter]>=24.8.0",
    "ruff>=0.6.4",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5",
    "jupyterlab>=4.2.5",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.5",
    "nbqa",
    "pytest>=8.0",
]


[tool.uv]
managed = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jepajitfusion"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.nbqa]
tools = ["black"]

[tool.isort]
profile = "black"
